--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,9 @@ jobs:
 
       - name: Publish package
         if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
+        run: |
+          python -m pip install --upgrade setuptools wheel
+          python setup.py sdist bdist_wheel
         uses: pypa/gh-action-pypi-publish@master
         with:
           user: __token__
