--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,11 +28,13 @@ jobs:
         if: failure()
         run: git diff
 
-      - name: Publish package
-        if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
+      - name: build wheel
+#        if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
         run: |
           python -m pip install --upgrade setuptools wheel
           python setup.py sdist bdist_wheel
+
+      - name: Publish package PyPi
         uses: pypa/gh-action-pypi-publish@master
         with:
           user: __token__
