--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,19 +19,20 @@ jobs:
           python-version: ${{ matrix.python-version }}
           architecture: x64
 
-      - name: Pre-Commit
+      - name: Setup Package and Install Devel Dependancies
         run: |
-          python -m pip install pre-commit
-          pre-commit run -a
+          python -m pip install .
+          python -m pip install -Ur dev-requirements.txt
+
+      - name: Pre-Commit
+        run: pre-commit run -a
 
       - name: Analysis (git diff)
         if: failure()
         run: git diff
 
       - name: Unit Tests
-        run: |
-          python -m pip install pytest
-          py.test tests -v
+        run: py.test tests -v
 
       - name: Build Package
         if: matrix.python-version == '3.7' && github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
