--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,10 +43,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
           architecture: x64
 
-      - name: Setup Package and Install Devel Dependancies
-        run: |
-          python -m pip install .
-          python -m pip install -Ur dev-requirements.txt
+      - name: Install nox
+        run: python -m pip install nox
 
-      - name: Unit Tests
-        run: py.test tests -v
+      - name: Run nox
+        run: nox
