--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
+.nox
 
 # Translations
 *.mo
@@ -102,3 +103,4 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+.idea/
