--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,8 @@ on:
 jobs:
   build-and-publish:
     name: Build and publish Python 🐍 distributions to PyPI
-    runs-on: ubuntu-18.04
+    if: startsWith(github.event.ref, 'refs/tags')
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout to master
         uses: actions/checkout@master
@@ -18,16 +19,16 @@ jobs:
       - name: Setup python
         uses: actions/setup-python@v1
         with:
-          python-version: '3.7'
+          python-version: '3.8'
           architecture: 'x64'
 
-      - name: Build Package
+      - name: Build Package and Check
         run: |
-          python -m pip install --upgrade setuptools wheel
+          python -m pip install --upgrade setuptools wheel twine
           python setup.py sdist bdist_wheel
+          python -m twine check dist/*
 
       - name: Deploy to PyPi
-        if: startsWith(github.event.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
         with:
           user: __token__
