--- a/setup.cfg
+++ b/setup.cfg
@@ -21,12 +21,13 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
     Natural Language :: English
-    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
     Intended Audience :: End Users/Desktop
     Intended Audience :: Developers
     Environment :: Console
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
 
 [options]
 packages = find:
@@ -37,7 +38,7 @@ install_requires =
     markdown
     requests
 include_package_data = True
-python_requires = >=3.5
+python_requires = >=3.6
 
 [options.entry_points]
 console_scripts =
