Fix link parsing

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,8 +35,8 @@ zip_safe = False
 setup_requires = setuptools_scm
 install_requires =
     click
-    markdown
     requests
+    urlextract
 include_package_data = True
 python_requires = >=3.6
 
