Upgrade GitHub Actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,12 @@ jobs:
 
     steps:
       - name: Checkout to master
-        uses: actions/checkout@master
+        uses: actions/checkout@3
 
       - name: Setup python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
+          python-version: '3.x'
           architecture: 'x64'
 
       - name: Pre-Commit Checks
@@ -34,12 +34,12 @@ jobs:
 
     steps:
       - name: Checkout to master
-        uses: actions/checkout@master
+        uses: actions/checkout@3
 
       - name: Setup python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
+          python-version: '3.x'
           architecture: 'x64'
       - name: Build and check with twine
         run: |
@@ -53,13 +53,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 'pypy3', '3.6', '3.7', '3.8' ]
+        python-version: [ 'pypy3.9', '3.7', '3.8', '3.9', '3.10' ]
     steps:
       - name: Checkout to master
-        uses: actions/checkout@master
+        uses: actions/checkout@3
 
       - name: Setup Python-${{ matrix.python-version }}
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
@@ -87,12 +87,12 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
       - name: Checkout to master
-        uses: actions/checkout@master
+        uses: actions/checkout@3
 
       - name: Setup python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
+          python-version: '3.x'
           architecture: 'x64'
 
       - name: Development setup and smoke test on platform ${{ matrix.os }}
